--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,64 @@ body {
 }
 
 /* Add styles here! */
+
+header {
+  background-color: hsl(0deg, 0%, 100%);
+  padding-top: 48px;
+  padding-bottom: 48px;
+  border-bottom: 5px solid hsl(0deg, 0%, 40%);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+h1 {
+  font-size: 1.5rem;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+h2 {
+  font-size: 1.25rem;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+p {
+  font-size: 1rem;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.max-width-wrapper {
+  max-width: 560px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk {
+  max-width: 300px;
+  padding: 0 24px;
+}
+
+.card {
+  padding: 24px;
+  background-color: hsl(0deg, 0%, 100%);
+  border-bottom: 5px solid hsl(0deg, 0%, 40%);
+}
+
+.indented-heading {
+  width: fit-content;
+  padding: 16px 40px;
+  margin-left: -40px;
+  margin-top: -16px;
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 5px solid hsl(45deg, 100%, 40%);
+}
