--- a/style.css
+++ b/style.css
@@ -7,6 +7,64 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
-/* Add styles here! */
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+header {
+  width: 100%;
+  padding-top: 64px;
+  background-color: hsl(0deg, 0%, 100%);
+}
+
+header .max-width-wrapper {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 30px;
+}
+
+.intro-chunk {
+  max-width: 470px;
+}
+
+.intro-chunk p {
+  font-size: 1.75rem;
+}
+
+.title {
+  margin-bottom: 64px;
+}
+
+main {
+  height: auto;
+  background-color: hsl(0deg, 0%, 60%);
+  border-top: 6px solid hsl(0deg, 0%, 40%);
+}
+
+main .max-width-wrapper {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 96px 0;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  padding: 8px 30px;
+  max-width: 850px;
+  border-bottom: 6px solid hsl(0deg, 0%, 40%);
+}
+
+.card p {
+  font-size: 1.50rem;
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  padding: 16px 36px;
+  max-width: 420px;
+  border-bottom: 6px solid hsl(45deg, 100%, 40%);
+  margin-left: -40px;
+}
