--- a/style.css
+++ b/style.css
@@ -10,3 +10,49 @@ body {
 }
 
 /* Add styles here! */
+
+.card {
+  background-color: white;
+  border-bottom: 5px solid hsl(0deg, 0%, 50%);
+  padding: 7px 25px 25px;
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 6px solid hsl(45deg, 100%, 40%);
+  margin-left: -50px;
+  margin-top: 0;
+  padding: 25px;
+  padding-left: 50px;
+}
+
+.intro-chunk {
+  padding: 25px;
+}
+
+.intro-chunk > p {
+  max-width: 300px;
+}
+
+header {
+  height: 40%;
+  padding-top: 50px;
+}
+
+.max-width-wrapper {
+  max-width: 625px;
+  margin: 0 auto;
+}
+
+main {
+  background: hsl(0deg, 0%, 60%);
+  border-top: 6px solid hsl(0deg, 0%, 40%);
+  height: 60%;
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+  font-weight: bold;
+}
