--- a/style.css
+++ b/style.css
@@ -1,12 +1,62 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 /* Add styles here! */
+
+h1 {
+  margin-bottom: 40px;
+  width: fit-content;
+}
+
+h2 {
+  margin: 0;
+  padding: 16px;
+  width: fit-content;
+  margin-left: -20px;
+  background-color: gold;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+header {
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+  padding: 48px 0;
+}
+
+.intro-chunk p {
+  width: 450px;
+  max-width: 320px;
+}
+
+.max-width-wrapper {
+  width: 1200px;
+  padding-left: 128px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* bottom container! */
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+}
+
+section {
+  height: 320px;
+  padding-top: 48px;
+}
+
+.card {
+  background-color: white;
+}
