--- a/style.css
+++ b/style.css
@@ -70,3 +70,11 @@ main {
     margin-bottom: 0;
 }
 
+.indented-heading {
+    width: fit-content;
+    margin-top: -16px;
+    margin-left: -32px;
+    background: hsl(45deg, 100%, 50%);
+    padding: 16px 32px;
+    border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
