--- a/style.css
+++ b/style.css
@@ -7,6 +7,62 @@ html,
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
-/* Add styles here! */
+h1{
+  font-size: 2rem;
+}
+
+strong{
+  color: hsl(160deg, 100%, 30%);
+}
+
+
+h2{
+  font-size: 1.5rem;
+  background-color: hsl(45deg, 100%, 50%);
+  padding: 16px;
+  margin-left: -24px;
+  margin-top: 8px;
+  border-bottom: solid 4px;
+  border-color: hsl(45deg, 100%, 40%);
+}
+
+section{
+  background-color: hsl(0deg, 0%, 60%);
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.card{
+  background-color: white;
+  padding: 8px;
+  border-bottom: solid 4px;
+  border-color: hsl(0deg, 0%, 40%);
+}
+
+.intro-chunk{
+  max-width: 400px;
+}
+
+.border-top{
+  border-top:solid 4px;
+  border-color: hsl(0deg, 0%, 40%);
+}
+
+.card, .intro-chunk{
+  width: fit-content;
+}
+
+@media (min-width: 400px) {
+  .card, .intro-chunk{
+    margin-left:32px;
+    margin-right: 64px;
+  }
+}
+
+.max-width-wrapper{
+  max-width: 800px;
+  margin: 0 auto;
+}
