--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -9,68 +9,90 @@ body {
   padding: 0;
 }
 
-/* Add styles here! */
-h1,
-h2,
-h3 {
-  margin: 0;
-}
-
 .max-width-wrapper {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 0 24px;
+  padding: 0 25px;
 }
 
-.intro-chunk {
-  padding: 96px 0 48px;
-  max-width: 400px;
+p {
+  padding: 0 25px;
+  line-height: 1.5;
+  font-size: 18px;
 }
 
-.intro-chunk p {
-  font-size: 1.25rem;
-  line-height: 1.4;
+.title {
+  font-size: 42px;
+  padding: 50px 25px 25px;
 }
 
-.intro-chunk strong {
-  color: hsl(160deg, 100%, 30%);
-}
-
-.intro-chunk .title {
-  font-size: 2rem;
-  margin-bottom: 48px;
-}
-
-header {
-  border-bottom: 8px solid hsl(0deg, 0%, 40%);
-}
-
-main {
-  background-color: hsl(0deg, 0%, 60%);
-  padding: 96px 0;
-}
-
-.card {
-  background-color: white;
-  padding: 24px;
-  margin: -24px;
-  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+strong {
+  color: green;
 }
 
 .indented-heading {
-  background: hsl(45deg, 100%, 50%);
-  margin-left: -32px;
-  margin-top: -16px;
-  padding: 16px 32px;
+  padding: 15px 5%;
+  margin-right: 25px;
+  background-color: rgb(241, 199, 30);
   width: fit-content;
-  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  min-width: min-content;
+  font-size: 30px;
+  border-bottom: goldenrod solid 10px;
+  margin-top: 14vh;
 }
 
-.card p {
-  font-size: 1.25rem;
-  line-height: 1.4;
+.card {
+  background-color: rgb(169, 169, 169);
+  border-top: gray solid 10px;
+  width: 100%;
+  height: 13vh;
+  margin-top: 50px;
 }
 
-.card p:last-child {
-  margin-bottom: 0;
+.container {
+  background-color: rgb(169, 169, 169);
+  border-top: gray solid 10px;
+  width: 100%;
+  height: 13vh;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
+
+/* for Desktop*/
+
+@media (min-width: 950px) {
+  .intro-chunk p {
+    padding-left: 20%;
+    padding-right: 40%;
+  }
+
+  .indented-heading {
+    margin-top: 0;
+    margin-left: -10px;
+  }
+
+  .title {
+    padding: 10% 20% 5%;
+  }
+
+  .card {
+    height: max-content;
+    padding: 5% 0;
+    border-top-width: 5px;
+    padding: 5% 18%;
+  }
+
+  .back {
+    background-color: white;
+    padding-top: 10px;
+  }
+
+  .back p {
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+
+  .container {
+    display: none;
+  }
+}
+
+/* Desktop*/
