--- a/style.css
+++ b/style.css
@@ -54,3 +54,15 @@ main p {
   max-width: 900px;
 }
 
+header .max-width-wrapper {
+  width: 100%;
+  padding: 64px 0;
+}
+
+.intro-chunk {
+  padding-left: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 500px;
+  max-width: 900px;
+}
