--- a/style.css
+++ b/style.css
@@ -7,6 +7,63 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 /* Add styles here! */
+
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.max-width-wrapper {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.title {
+  font-size: 2rem;
+  margin-bottom: 48px;
+}
+
+.indented-heading {
+  font-size: 1.5rem;
+  background-color: hsl(45deg, 100%, 50%);
+  padding: 16px 48px;
+  width: fit-content;
+  margin-top: 0;
+  margin-left: -48px;
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.75em;
+}
+
+header {
+  margin-top: 64px;
+}
+
+main {
+  border-top: 8px solid hsl(0deg, 0%, 60%);
+  background-color: hsl(0deg, 0%, 40%);
+  min-height: 100%;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  margin-top: 64px;
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+}
+
+.intro-chunk,
+.card {
+  padding: 16px 32px;
+}
+
+.intro-chunk {
+  margin-bottom: 48px;
+}
