--- a/style.css
+++ b/style.css
@@ -7,6 +7,73 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%
 }
 
 /* Add styles here! */
+
+header {
+  width: 1280px;
+  height: 294px;
+  background-color: hsl(0deg, 0%, 100%);
+  margin-top: 96px;
+  margin-right: 0px;
+  margin-left: 0px;
+  border-bottom: solid 8px hsl(0deg, 0%, 60%);
+}
+
+.intro-chunk {
+  min-height: 100%;
+  padding-top: 0px;
+  padding-left: 264px;
+  padding-right: 601px;
+  padding-bottom: 64px;
+}
+
+.title {
+  margin-top: 0px;
+  margin-bottom: 32px;
+  font-size: 2rem;
+}
+
+p {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  font-size: 1.25rem;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%)
+}
+
+main {
+  width: 1280px;
+  height: 450px;
+  border: solid 1px hsl(0deg, 0%, 40%);
+  background-color: hsl(0deg, 0%, 40%);
+}
+
+.card {
+  border: solid 1px hsl(0deg, 0%, 40%);
+  border-bottom: solid 8px hsl(0deg, 0%, 60%);
+  margin-top: 72px;
+  margin-left: 232px;
+  margin-bottom: 58px;
+  margin-right: 240px;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-bottom: 24px;
+  background-color: hsl(0deg, 0%, 100%);
+}
+
+.indented-heading {
+  font-size: 1.5rem;
+  text-align: center;
+  background: hsl(45deg, 100%, 50%);
+  width: fit-content;
+  padding: 16px 32px;
+  margin-left: -32px;
+  border-bottom: solid 8px hsl(45deg, 100%, 40%);
+}
+
+
